--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -1,15 +1,4 @@
-<% if (theme.duoshuo_shortname) { %>
-  <script type="text/javascript">
-  var duoshuoQuery = {short_name:"<%- theme.duoshuo_shortname %>"};
-  (function() {
-	var ds = document.createElement('script');
-	ds.type = 'text/javascript';ds.async = true;
-	ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-	ds.charset = 'UTF-8';
-	(document.getElementsByTagName('head')[0]|| document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-  </script>
-<% } else if (theme.diqus_shortname) { %>
+<% if (theme.diqus_shortname) { %>
   <script type="text/javascript">
   var disqus_config = function () {
     this.page.url = '<%= page.permalink %>';
