--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -6,24 +6,20 @@
     <div class="entry-meta">
       <%- partial('post/date', {class_name: 'entry-date', date_format: 'MMMM DD, YYYY'}) %>
       <%- partial('post/category') %>
-      <%- partial('post/visitor') %>
-      <%- partial('post/comment') %>
     </div>
   </header>
-  <% if (index && (post.excerpt || theme.auto_excerpt)){ %>
-    <% if (post.photos != ""){ %>
-      <div class="entry-thumb">
+  <% if (index){ %>
+    <div class="entry-thumb">
+      <% if (post.photos != ""){ %>
         <a href="<%- url_for(post.path) %>"><img width="500" height="300" src="<%= post.photos[0] %>" alt=""></a>
-      </div>
-    <% } else if (theme.random_thumb){ %>
-      <div class="entry-thumb">
+      <% } else { %>
         <a href="<%- url_for(post.path) %>"><img width="500" height="300" src="https://unsplash.it/500/300/?random" alt=""></a>
-      </div>
-    <% } %>
+      <% } %>
+    </div>
     <div class="entry-summary">
       <% if (post.excerpt) { %>
         <%- post.excerpt %>
-      <% } else if (theme.auto_excerpt) { %>
+      <% } else { %>
         <%- truncate(strip_html(post.content), {length: 200, omission: '...'}) %>
       <% } %>
     </div>
@@ -31,7 +27,7 @@
       <a class="button post-button" href="<%- url_for(post.path) %>"><%= __('read_more') %></a>
     </P>
   <% } else { %>
-    <div class="entry-content"><%- post.content %></div>
+    <div id="entry-content" class="entry-content"><%- post.content %></div>
   <% } %>
 </article>
 <% if (!index) { %>
@@ -42,19 +38,5 @@
     <%- partial('post/copyright') %>
   </footer>
   <%- partial('post/nav') %>
-  <% if (post.comments){ %>
-    <%- partial('comment') %>
-  <% } %>
-  </section>
-
-  <aside id="secondary"  class="widget-area" role="complementary">
-    <aside id="toc" class="toc-article">
-      <strong class="toc-title"><%= __('contents') %></strong>
-      <% if (toc(post.content) != ""){ %>
-        <%- toc(post.content, { "class": "nav" }) %>
-      <% } else { %>
-        <ol class="nav"><%= __('none') %></ol>
-      <% } %>
-    </aside>
-  </aside>
 <% } %>
+</section>
