--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,21 +1,18 @@
 <header id="header" class="site-header">
   <div class="container">
-    <div class="site-branding  col-xs-8">
+    <div class="site-branding">
       <h1 class="site-title">
-        <a href="<%- url_for() %>" title="<%= config.title %>" rel="home"><%= config.title %></a>
+        <a href="<%- url_for() %>" title="<%= config.title %>"><%= config.title %></a>
       </h1>
-      <% if (config.description){ %>
-        <p class="site-description"><%= config.description %></p>
-      <% } %>
     </div>
-    <div class="btn-menu col-xs-4"></i><i class="fa fa-navicon"></i></div>
-    <nav id="mainnav" class="main-navigation col-xs-12 col-md-8 col-sm-6" role="navigation">
+    <div class="btn-menu"><ul><li></li><li></li><li></li></ul></div>
+    <div id="mainnav" class="main-navigation">
       <ul id="primary-menu" class="menu">
         <% for (var i in theme.menu){ %>
           <li><a href="<%- url_for(theme.menu[i]) %>" title="<%= i %>"><%= __(i) %></a></li>
         <% } %>
       </ul>
-    </nav>
+    </div>
   </div>
 </header>
 <div class="header-clone"></div>
