--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -38,6 +38,21 @@ font-size = 15px
     -ms-transform: rotate(359deg)
     transform: rotate(359deg)
 
+sidebar = hexo-config("sidebar")
+
+// Layout
+block-margin = 50px
+article-padding = 20px
+
+// Grids
+main-column = 8.4
+side-column = 3.6
+column-width = 76px
+gutter-width = 20px
+columns = main-column + side-column
+
 // Media queries
-mq-mobile = "(max-width: 768px)"
-mq-normal = "(min-width: 784px)"
+xs-max = "(max-width: 768px)"
+sm-min = "(min-width: 768px)"
+md-min = "(min-width: 992px)"
+lg-min = "(min-width: 1200px)"
