--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,4 +1,4 @@
-<article id="<%= post.layout %>-<%= post.slug %>" <% if (!index){ %>style="border: none; padding-bottom: 20px;"<% } %> class="article article-type-<%= post.layout %> hentry category-<%= post.category %> clearfix">
+<article id="<%= post.slug %>" class="article clearfix">
   <header class="entry-header">
   <% if (post.link || post.title){ %>
     <%- partial('post/title', {class_name: 'entry-title'}) %>
@@ -28,15 +28,14 @@
     </P>
   <% } else { %>
     <div id="entry-content" class="entry-content"><%- post.content %></div>
+    <footer class="entry-footer">
+      <div class="entry-meta" style="border-bottom: none;">
+        <%- partial('post/tag') %>
+      </div>
+      <%- partial('post/copyright') %>
+    </footer>
   <% } %>
 </article>
 <% if (!index) { %>
-  <footer class="entry-footer">
-    <div class="entry-meta" style="border-bottom: none;">
-      <%- partial('post/tag') %>
-    </div>
-    <%- partial('post/copyright') %>
-  </footer>
   <%- partial('post/nav') %>
 <% } %>
-</section>
