--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -1,3 +1,12 @@
+$media-query
+  @media (max-width: 768px)
+    width: 100%
+  @media (min-width: 768px)
+    width: 750px
+  @media (min-width: 992px)
+    width: 970px
+  @media (min-width: 1200px)
+    width: 1170px
 $block-caption
   text-decoration: none
   text-transform: uppercase
